data/derived/fa15/progs/unify/prog2453.ml.out
Characters 36-46:
  if ( n / 10 ) then 0 else addHelp(n,0);;
     ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         bool
